2002-10-22    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/ftpfs.py: fixes to metaclass.  Doesn't work well
	anyway, on my installation; for me, ftplib segfaults, which is
	quite nasty.

2002-10-21  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/ftpfs.py (FTPFile.__new__): fatal typo in metaclass.

2002-10-09  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/vfs/ftpfs.py (FTPFile.connect): fatal bug -- left out
	"self".  Oy.
	(FtpFS.__init__): changed default port to ftplib.FTP_PORT rather
	than 0.
	
2002-10-08    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/auth/__init__.py (CookieAuthBase.login): added
	REMOTE_USER and REMOTE_PASSWORD to CONNECTION.env more consistently.
	(RespAuthBase.authFailed): no longer require use of string exception, 
	but permit it for backwards compatibility.
	
2002-10-08  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlrpchandler.py (XMLRPCServer.handle_cgi): added support
	for cgis, thereby justifying this module's presence in pylibs.
	(munge_transports): a foul hack to give me the ability to use
	basic auth (or add any http headers I want to the request) with
	xmlrpclib.

2002-10-05  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swcgi.py.in: swcgi was misbehaving due to not always
	reading all there was to be read off the aecgi socket; use of the
	SocketScience module fixed that.

2002-10-04    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/ftpfs.py: a vfs.FS implementation for FTP.
	For Python 2.2, provides some error recovery in case of timeouts.
	(FTPFile.robuster): robuster now even robuster.

2002-10-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/PyDO/postconn.py (_dateConvertFromDB): my earlier fix
	broke something else.  This date parsing business should be done
	better.

	* pylibs/xmlrpchandler.py (XMLRPCServer._multicall): added
	system.multicall ("boxcarring") support; reworked the dispatching
	mechanism; now use standard fault codes; added workaround for